tests/negative/comptime/self_referential_fn.orng
// self_referential_fn.orng:7:6: error: attempt to take slice-of something that is not an array
//     []comptime {main}
//     ^
// 
fn main() -> Int {
    // This can't be checked properly because slice-of can't know if comptime is valid without knowing if slice-of is valid
    []comptime {main}
    323
}